# Location: ./builtins/pdps/cel/Cargo.toml
# Copyright 2026
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# cpex-pdp-cel — a `PdpResolver` that evaluates CEL (Common Expression
# Language) boolean predicates against the policy `AttributeBag`, authored
# inline in route YAML (`cel: { expr: "..." }`).
#
# See the crate-level module docs in `src/lib.rs` for the full picture:
# where it sits in the stack, the bag→CEL activation, the decision
# contract, when to choose CEL vs Cedar/OPA, and why evaluation is
# synchronous and side-effect-free.

[package]
name = "cpex-pdp-cel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CPEX PDP — CEL (Common Expression Language) predicate evaluation."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
apl-core = { path = "../../../crates/apl-core", version = "0.2.0" }
# The CEL interpreter from cel-rust/cel-rust (formerly
# clarkmcc/cel-rust). Sync eval, comprehension macros (`has`, `all`,
# `exists`, `map`, `filter`), custom functions. Caret spec tracks 0.x
# patch/minor; pin tighter if the activation API churns.
#
# Features pinned explicitly so a future change to the upstream
# `default = [...]` set can't silently add or remove capabilities
# operator policies depend on:
#   - regex: enables `matches(s, pattern)` for URL/path predicates
#     ("did the request target match `^/api/v1/`?"); virtually every
#     real policy needs this.
#   - chrono: enables `timestamp()`, `duration()`, and date/time
#     arithmetic for time-window policies ("business hours", "this
#     credential is fresh enough").
# `json` and `bytes` are deliberately off — APL marshals JSON at its
# own layer, and CEL bytes ops aren't needed for ABAC predicates.
cel = { version = "0.13", default-features = false, features = ["regex", "chrono"] }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# End-to-end integration tests wire the cel factory through the apl-cpex
# visitor and exercise it against a real `PluginManager`. These dev-dep
# edges only exist for tests — the crate itself stays apl-core-only at
# compile time so it can be used standalone (e.g. in a custom orchestrator
# that doesn't go through apl-cpex at all).
apl-cmf = { path = "../../../crates/apl-cmf", version = "0.2.0" }
apl-cpex = { path = "../../../crates/apl-cpex", version = "0.2.0" }
cpex-core = { path = "../../../crates/cpex-core", version = "0.2.0" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
